chore(ci): configure JDK 17 tests on Linux and Windows (#637)
* chore(ci): configure JDK 17 tests on Linux and Windows

* allow errorprone to access internal sun  APIs

* set JAVA_HOME env var in bat scripts

* update maven profile for errorprone with Java 8

* add missing newlines